# windows-tray-battery-percent

./: .gitignore  Cargo.toml  README.md  build-doc-images.bat  build-release-minified.bat  build.rs  run.bat
src/: battery.rs  battery_monitor.rs  battery_tray_app.rs  battery_tray_icon.rs  build-doc-images.rs  debug_util.rs  icon_builder.rs  image.rs  main.rs  tray_util.rs
