[package]
name = "windows-tray-battery-percent"
version = "0.1.0"
edition = "2021"

[features]
default = []

# Debug features
debug = [
	"debug-logging",
	"debug_image_icon",
]
debug-logging = []
debug_image_icon = []

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
starship-battery = "0.10.1"
image = { version = "0.25.6", default-features = false, features = ["bmp"] }
tray-icon = { version = "0.20.1", default-features = false }
winit = "0.30"

[build-dependencies]
winres = "0.1"
